# things

./: .gitignore  CLAUDE.md  DEVELOPER.md  README.md  claude_notes.md  deploy.sh  index.php  schema.sql  settings.php
controller/: home.php  items.php  references.php  scan.php  state.php  viewer.php
js/: item_detail.js  pwa.js
layout/home/: lay_html.php
layout/ui/: lay_html.php
lib/: api_exit.php  api_input.php
model/items/: do_adjust_quantity.php  do_create_item.php  do_move_item.php  do_update_item.php  qry_get_item.php  qry_list_items.php
model/locations/: do_create_location.php  do_update_location.php
model/references/: do_delete_reference.php  do_update_reference.php  qry_list_references.php
model/scan/: do_process_scan.php
model/state/: do_toggle_follow.php  qry_get_state.php
plugins/: profiler.php
view/pwa/: scanner.php
view/ui/: item_detail.php  locations_tree.php
viewer/: ApiPoller.cpp  ApiPoller.h  BrowserWindow.cpp  BrowserWindow.h  CMakeLists.txt  DocViewer.cpp  DocViewer.h  ErrorOverlay.cpp  ErrorOverlay.h  ItemPanel.cpp  ItemPanel.h  MainWindow.cpp  MainWindow.h  Makefile  ScannerInput.cpp  ScannerInput.h  Settings.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp  resources.qrc
wsserver/: CMakeLists.txt  Makefile  StateServer.cpp  StateServer.h  main.cpp  setup-service.sh  things-ws.service
www/: settings.php
www/controller/: items.php  locations.php  pwa.php  references.php  ui.php
www/js/: item_detail.js  items_list.js  locations_tree.js  pwa.js
www/lib/: anthropic.php  db_esc.php  location_path.php  notify_ws.php
(+23 files in other folders)
